plugins {
    id 'com.android.application'
    id 'kotlin-android'
    id 'kotlin-kapt'
    id 'dagger.hilt.android.plugin'
}

configurations {
    all {
        resolutionStrategy {
            exclude group: "org.jetbrains.kotlinx", module: "kotlinx-coroutines-debug"
        }
    }
}

android {
    compileSdk 31

    testOptions {
        unitTests.includeAndroidResources = true
    }
    defaultConfig {
        applicationId "com.fx.exchange_experiment"
        minSdk 21
        targetSdk 30
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
        vectorDrawables.useSupportLibrary = true

        kapt {
            arguments {
                arg("room.schemaLocation", "$projectDir/schemas".toString())
                arg("room.incremental", "true")
                arg("room.expandProjection", "true")
            }
        }
    }

    buildFeatures {
        dataBinding true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField "String", "DB_NAME", "\"currency_exchange\""
        }
        debug {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField "String", "DB_NAME", "\"currency_exchange\""
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    packagingOptions {
        exclude "**/attach_hotspot_windows.dll"
        exclude "META-INF/licenses/**"
        exclude "META-INF/AL2.0"
        exclude "META-INF/LGPL2.1"
        exclude "META-INF/LICENSE.md"
    }


    kotlinOptions {
        jvmTarget = '1.8'
    }

    tasks.withType(Test) {
        useJUnitPlatform()
        jvmArgs '--enable-preview'
    }

}

dependencies {
    implementation 'androidx.annotation:annotation:1.2.0'

    //Extensions
    implementation "androidx.activity:activity-ktx:1.4.0-alpha01"
    implementation 'androidx.fragment:fragment-ktx:1.3.6'

    //retrofit and dependencies
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'

    //Hilt
    implementation("com.google.dagger:hilt-android:2.38.1")
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    kapt("com.google.dagger:hilt-android-compiler:2.38.1")

    //Room
    def room_version = "2.3.0"
    implementation "androidx.room:room-ktx:$room_version"
    kapt "androidx.room:room-compiler:$room_version"

    // Work Manager
    def work_version = "2.6.0"
    implementation "androidx.work:work-runtime-ktx:$work_version"
    implementation("androidx.hilt:hilt-work:1.0.0")
    kapt("androidx.hilt:hilt-compiler:1.0.0")
    androidTestImplementation("androidx.work:work-testing:$work_version")

    implementation 'androidx.core:core-ktx:1.6.0'
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'

    //Test
    androidTestImplementation 'androidx.test:core:1.4.0'
    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
    androidTestImplementation 'androidx.test:runner:1.4.0'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.3'
//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'

    testImplementation 'org.robolectric:robolectric:4.4'

    androidTestImplementation("org.mockito:mockito-core:3.9.0")
    androidTestImplementation "io.mockk:mockk:1.9.3"
    androidTestImplementation "io.mockk:mockk-android:1.9.3"

    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
    androidTestImplementation 'app.cash.turbine:turbine:0.6.1'


}